<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">MFTG RSDL YEAH</string>

    <!-- English settings -->
    <string name="str_menu_quit">Quit</string>

    <!-- Downloader -->
    <string name="toast_download_complete">Download Complete.\nVideos are available to view.</string>

    <string name="toast_index_not_found">Can\'t load main content. Please contact the developer.</string>

    <!-- EULA -->
    <string name="btn_agree_text">I Agree</string>
    <string name="eula_text">
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        Download Complete.\nVideos are available to view.
        </string>

    <string name="app_setup_dialog_title">Please set up application properties</string>
    <string name="app_setup_protocol_ip_address">IP Address:</string>
    <string name="app_setup_protocol_ip_address_default">10.10.0.1</string>
    <string name="app_setup_protocol_tcp_port">TCP Port:</string>
    <string name="app_setup_protocol_tcp_port_default">12345</string>
    <string name="app_setup_protocol_wifi">WiFi</string>
    <string name="app_setup_protocol_bluetooth">Bluetooth</string>

</resources>